feat: make static schedule instead of using google calendar embed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,11 @@ body {
   margin: 0;
 }
 
+h1,
+h2,
 h3,
-p {
+p,
+li {
   font-family: "Nanum Gothic", sans-serif;
 }
 
@@ -24,7 +27,7 @@ p {
   grid-template-rows: 1fr;
 }
 
-.wrapper-page>div {
+.wrapper-page > div {
   box-sizing: border-box;
 }
 
@@ -57,28 +60,28 @@ p {
   text-align: center;
 }
 
-.nav-section>ul {
+.nav-section > ul {
   list-style-type: none;
   padding: 0;
 }
 
-.nav-section>ul>li {
+.nav-section > ul > li {
   border-right: solid white 2px;
   display: inline;
 }
 
-.nav-section>ul>li:last-child {
+.nav-section > ul > li:last-child {
   border: none;
 }
 
-.nav-section>ul>li>a {
+.nav-section > ul > li > a {
   text-decoration: none;
   font-weight: 900;
   color: #b52332;
   font-family: "Nanum Gothic", sans-serif;
 }
 
-.nav-section>ul>li>a:hover {
+.nav-section > ul > li > a:hover {
   text-decoration: none;
   color: white;
 }
@@ -129,14 +132,14 @@ p {
   padding: 25px 200px;
 }
 
-.footer-section>div {
+.footer-section > div {
   height: 200px;
   text-align: left;
   color: #bbb;
   line-height: 30px;
 }
 
-.footer-images{
+.footer-images {
   display: grid;
   grid-template-rows: 1fr 2fr;
 }
@@ -159,16 +162,16 @@ p {
   margin-left: 40px;
 }
 
-.coach-description>h3 {
+.coach-description > h3 {
   font-size: 30px;
   border-bottom: solid 1px black;
 }
 
-.coach-description>p {
+.coach-description > p {
   font-size: 18px;
 }
 
-.coach-image>img {
+.coach-image > img {
   max-width: 300px;
   max-height: 500px;
   border: solid 5px black;
@@ -179,8 +182,47 @@ p {
   color: grey;
 }
 
-.home-image>img {
+.home-image > img {
   border: solid #222 5px;
+}
+
+.schedule-page {
+  background-color: black;
+  color: white;
+}
+
+.schedule-page-header {
+  margin: 16px;
+  text-align: center;
+}
+
+.schedule-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 2em;
+}
+
+.schedule-section {
+  margin: 1em;
+  padding: 0.5em;
+  flex: 1 0 45%;
+  background-color: #222;
+  border: solid darkgray 2px;
+  border-radius: 5px;
+}
+
+.schedule-section-header {
+  display: inline-block;
+  font-size: 20px;
+  margin: 16px;
+}
+
+.schedule-list {
+  margin-left: 24px;
+}
+
+.schedule-list > li {
+  margin-bottom: 8px;
 }
 
 /*
@@ -206,9 +248,9 @@ p {
   color: #fff;
 }
 
-#sparring>.home-content>.section-title,
-#grappling>.home-content>.section-title,
-#children>.home-content>.section-title,
+#sparring > .home-content > .section-title,
+#grappling > .home-content > .section-title,
+#children > .home-content > .section-title,
 #welcome-header {
   border-bottom: solid 1px #ccc;
 }
@@ -234,10 +276,6 @@ p {
 }
 
 #google-map-embed {
-  height: 80vh;
-}
-
-#calendar-embed {
   height: 80vh;
 }
 
@@ -280,7 +318,7 @@ p {
   p {
     font-size: 12px;
   }
-  .logo>img {
+  .logo > img {
     height: 50px;
   }
   .header-section {
@@ -290,11 +328,11 @@ p {
   .social-2 {
     padding-top: 8px;
   }
-  .nav-section>ul>li {
+  .nav-section > ul > li {
     margin-left: 10px;
     padding-right: 5px;
   }
-  .nav-section>ul>li>a {
+  .nav-section > ul > li > a {
     font-size: 13px;
   }
   .hero-section {
@@ -320,7 +358,7 @@ p {
     grid-row: 1 / 2;
     text-align: center;
   }
-  .home-image>img {
+  .home-image > img {
     max-width: 300px;
     max-height: 300px;
   }
@@ -338,7 +376,7 @@ p {
   .footer-logo {
     grid-row: 1 / 2;
   }
-  .footer-logo>img {
+  .footer-logo > img {
     height: 50px;
   }
   .footer-prajioud > img {
@@ -359,7 +397,7 @@ p {
     padding: 25px 35px;
     height: 600px;
   }
-  .footer-section>div {
+  .footer-section > div {
     text-align: center;
   }
   .coach-image {
@@ -369,30 +407,30 @@ p {
     line-height: 25px;
     padding-left: 0;
   }
-  .coach-description>p {
+  .coach-description > p {
     font-size: 14px;
   }
-  .coach-description>h3 {
+  .coach-description > h3 {
     font-size: 22px;
   }
   #coach-jim {
     padding-top: 50px;
   }
-  #coach-jim>.coach-image>img {
+  #coach-jim > .coach-image > img {
     max-width: 250px;
   }
-  #coach-linda>.coach-image>img {
+  #coach-linda > .coach-image > img {
     margin-left: 0px;
   }
   #coach-linda {
     padding-top: 30px;
     height: 800px;
   }
-  #coach-linda>.coach-description {
+  #coach-linda > .coach-description {
     grid-row: 2 / 3;
     height: 250px;
   }
-  #coach-linda>.coach-image {
+  #coach-linda > .coach-image {
     grid-row: 1 / 2;
   }
 }
@@ -409,7 +447,7 @@ p {
     padding: 25px 10px;
     word-spacing: 20px;
   }
-  .nav-section>ul>li {
+  .nav-section > ul > li {
     margin-left: 4%;
     padding-right: 4%;
   }
@@ -424,14 +462,14 @@ p {
     line-height: 30px;
     height: 450px;
   }
-  .home-image>img {
+  .home-image > img {
     max-width: 300px;
     max-height: 300px;
   }
-  .section-img-l>.home-image>img {
+  .section-img-l > .home-image > img {
     margin-right: 40px;
   }
-  .section-img-r>.home-image>img {
+  .section-img-r > .home-image > img {
     margin-left: 40px;
   }
   .section-title {
@@ -453,23 +491,23 @@ p {
   .footer-prajioud {
     grid-row: 2 / 3;
   }
-  .footer-logo>img {
+  .footer-logo > img {
     height: 75px;
   }
   .footer-info {
     grid-column: 1 / 3;
     font-size: 14px;
   }
-  .footer-section>div {
+  .footer-section > div {
     text-align: center;
   }
   .coach-description {
     line-height: 25px;
   }
-  .coach-description>p {
+  .coach-description > p {
     font-size: 14px;
   }
-  .coach-description>h3 {
+  .coach-description > h3 {
     font-size: 22px;
   }
   .footer-prajioud > img {
@@ -478,10 +516,10 @@ p {
   #coach-jim {
     padding-top: 50px;
   }
-  #coach-jim>.coach-image>img {
+  #coach-jim > .coach-image > img {
     max-width: 300px;
   }
-  #coach-linda>.coach-image>img {
+  #coach-linda > .coach-image > img {
     margin-left: 70px;
   }
   #coach-linda {
@@ -511,7 +549,7 @@ p {
     padding: 30px 10px;
     word-spacing: 40px;
   }
-  .nav-section>ul>li {
+  .nav-section > ul > li {
     margin-left: 6%;
     padding-right: 6%;
   }
@@ -526,17 +564,17 @@ p {
     line-height: 34px;
     height: 475px;
   }
-  .home-image>img {
+  .home-image > img {
     max-width: 350px;
     max-height: 350px;
   }
   .separator {
     height: 350px;
   }
-  .section-img-l>.home-image>img {
+  .section-img-l > .home-image > img {
     margin-right: 50px;
   }
-  .section-img-r>.home-image>img {
+  .section-img-r > .home-image > img {
     margin-left: 50px;
   }
   .section-title {
@@ -561,7 +599,7 @@ p {
   .coach-description {
     line-height: 60px;
   }
-  .coach-description>p {
+  .coach-description > p {
     font-size: 18px;
   }
   #quote {
@@ -573,11 +611,11 @@ p {
   #coach-jim {
     padding-top: 30px;
   }
-  #coach-jim>.coach-image>img {
+  #coach-jim > .coach-image > img {
     max-width: 380px;
     margin-right: 25px;
   }
-  #coach-linda>.coach-image>img {
+  #coach-linda > .coach-image > img {
     margin-left: 70px;
   }
   #coach-linda {
@@ -601,7 +639,7 @@ p {
     padding: 30px 10px;
     word-spacing: 60px;
   }
-  .nav-section>ul>li {
+  .nav-section > ul > li {
     margin-left: 7%;
     padding-right: 7%;
   }
@@ -618,7 +656,7 @@ p {
     padding: 75px 130px;
     line-height: 40px;
   }
-  .home-image>img {
+  .home-image > img {
     max-width: 400px;
     max-height: 400px;
   }
@@ -626,10 +664,10 @@ p {
     text-align: center;
     height: 500px;
   }
-  .section-img-l>.home-image>img {
+  .section-img-l > .home-image > img {
     margin-right: 100px;
   }
-  .section-img-r>.home-image>img {
+  .section-img-r > .home-image > img {
     margin-left: 100px;
   }
   .section-title {
@@ -654,7 +692,7 @@ p {
   .coach-description {
     line-height: 60px;
   }
-  .coach-description>p {
+  .coach-description > p {
     font-size: 20px;
   }
   #quote {
@@ -666,11 +704,11 @@ p {
   #coach-jim {
     padding-top: 40px;
   }
-  #coach-jim>.coach-image>img {
+  #coach-jim > .coach-image > img {
     max-width: 900px;
     margin-right: 40px;
   }
-  #coach-linda>.coach-image>img {
+  #coach-linda > .coach-image > img {
     margin-left: 70px;
   }
   #coach-linda {
