--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,10 +160,6 @@ li {
   height: 97%;
 }
 
-.coach-description {
-  margin-left: 40px;
-}
-
 .coach-description > h3 {
   font-size: 30px;
   border-bottom: solid 1px black;
@@ -334,73 +330,93 @@ li {
   p {
     font-size: 12px;
   }
+
   .logo > img {
     height: 50px;
   }
+
   .header-section {
     grid-template-columns: auto;
   }
+
   .social-1,
   .social-2 {
     padding-top: 8px;
   }
+
   .nav-section > ul > li {
     margin-left: 10px;
     padding-right: 5px;
   }
+
   .nav-section > ul > li > a {
     font-size: 13px;
   }
+
   .hero-section {
     height: 180px;
     background-image: url("../images/silouette.png");
   }
+
   .separator {
     background-attachment: scroll;
   }
+
   .section {
     padding: 10px 30px;
     line-height: 25px;
   }
+
   .section-img-l {
     display: grid;
     grid-template-columns: auto;
   }
+
   .section-img-r {
     display: grid;
     grid-template-columns: auto;
   }
+
   .home-image {
     grid-row: 1 / 2;
     text-align: center;
   }
+
   .home-image > img {
     max-width: 300px;
     max-height: 300px;
   }
+
   .home-content {
     grid-row: 2 / 3;
   }
+
   #quote {
     top: 20px;
     left: 50px;
     width: 120px;
   }
+
   .section-title {
     font-size: 20px;
   }
+
   .footer-logo {
     grid-row: 1 / 2;
   }
+
   .footer-logo > img {
     height: 50px;
   }
+
   .footer-prajioud > img {
     max-width: 200px;
   }
+
   .footer-prajioud {
     grid-row: 2 / 3;
   }
+
   .footer-images {
     grid-column: 1 / 3;
   }
@@ -409,43 +425,52 @@ li {
     grid-column: 1 / 3;
     font-size: 12px;
   }
+
   .footer-section {
     padding: 25px 35px;
     height: 600px;
   }
+
   .footer-section > div {
     text-align: center;
   }
+
   .coach-image {
     text-align: center;
   }
+
   .coach-description {
     line-height: 25px;
     padding-left: 0;
   }
+
   .coach-description > p {
     font-size: 14px;
   }
+
   .coach-description > h3 {
     font-size: 22px;
   }
+
   #coach-jim {
     padding-top: 50px;
   }
-  #coach-jim > .coach-image > img {
-    max-width: 250px;
-  }
+
   #coach-linda > .coach-image > img {
     margin-left: 0px;
+    margin-bottom: 2em;
   }
+
   #coach-linda {
     padding-top: 30px;
     height: 800px;
   }
+
   #coach-linda > .coach-description {
     grid-row: 2 / 3;
     height: 250px;
   }
+
   #coach-linda > .coach-image {
     grid-row: 1 / 2;
   }
@@ -463,40 +488,50 @@ li {
     padding: 25px 10px;
     word-spacing: 20px;
   }
+
   .nav-section > ul > li {
     margin-left: 4%;
     padding-right: 4%;
   }
+
   .hero-section {
     height: 275px;
   }
+
   .separator {
     background-attachment: scroll;
   }
+
   .section {
     padding: 25px 80px;
     line-height: 30px;
     height: 450px;
   }
+
   .home-image > img {
     max-width: 300px;
     max-height: 300px;
   }
+
   .section-img-l > .home-image > img {
     margin-right: 40px;
   }
+
   .section-img-r > .home-image > img {
     margin-left: 40px;
   }
+
   .section-title {
     font-size: 28px;
     line-height: 50px;
     margin-bottom: 10px;
   }
+
   .footer-section {
     height: 750px;
     padding: 50px 185px;
   }
+
   .footer-images {
     grid-column: 1 / 3;
   }
@@ -504,44 +539,61 @@ li {
   .footer-logo {
     grid-row: 1 / 2;
   }
+
   .footer-prajioud {
     grid-row: 2 / 3;
   }
+
   .footer-logo > img {
     height: 75px;
   }
+
   .footer-info {
     grid-column: 1 / 3;
     font-size: 14px;
   }
+
   .footer-section > div {
     text-align: center;
   }
+
+  .coach-image {
+    margin-right: 25px;
+  }
+
   .coach-description {
     line-height: 25px;
   }
+
   .coach-description > p {
     font-size: 14px;
   }
+
   .coach-description > h3 {
     font-size: 22px;
   }
+
   .footer-prajioud > img {
     max-width: 300px;
   }
+
   #coach-jim {
     padding-top: 50px;
   }
+
   #coach-jim > .coach-image > img {
     max-width: 300px;
   }
+
   #coach-linda > .coach-image > img {
     margin-left: 70px;
   }
+
   #coach-linda {
     padding-top: 30px;
     height: 570px;
   }
+
   #quote {
     top: 15%;
     left: 15%;
