--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ li {
 .nav-section > ul > li > a {
   text-decoration: none;
   font-weight: 900;
-  color: #b52332;
+  color: #f5e60b;
   font-family: "Nanum Gothic", sans-serif;
 }
 
@@ -369,7 +369,7 @@ li {
   }
 
   .section {
-    padding: 10px 30px;
+    padding: 30px 30px;
     line-height: 25px;
   }
 
